# image-encoders

./: .gitignore  README.rst  pyproject.toml
examples/: show-features.py
src/: __init__.py  base.py  convert.py  models.py
src/encoders/: base.py  colors.py  composite.py  io.py  models.py
tests/: conftest.py  prop_colors.py  test_backward.py  test_checkpoint.py  test_forward.py  test_models.py
