[tool.poetry]
name = "image-encoders"
version = "0.1.0"
description = ""
authors = ["Alex J. Champandard <445208+alexjc@users.noreply.github.com>"]
license = "AGPL-3.0"
packages = [
    { include = "encoders", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
